fix: extra padding from inline repeater field

--- a/resources/js/assets/sass/partials/_form.scss
+++ b/resources/js/assets/sass/partials/_form.scss
@@ -301,10 +301,6 @@
 
 		.field-row {
 			gap: 10px;
-
-			&:not(:last-child) {
-				margin: 0 0 18px 0;
-			}
 		}
 
 		.el-form-item {
